--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   database:
-    image: 'postgres:15'
+    image: 'postgres:16.1-alpine3.19'
     ports:
       - "5432:5432"
     environment:
